<resources>
    <string name="app_name">MocaTest</string>
    <string name="sex_prompt">Select Sex</string>
    <string-array name="sex_options">
        <item>Άνδρας</item>
        <item>Γυναίκα</item>
    </string-array>
    <string name="hour_hand">ωρα</string>
    <string name="minute_hand">λεπτο</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_ten">10</string>
    <string name="number_eleven">11</string>
    <string name="number_twelve">12</string>
    <string name="animal_lion">Lion</string>
    <string name="animal_rhino">Rhino</string>
    <string name="animal_camel">Camel</string>
    <string name="sequence_completed">Sequence completed!</string>
    <string name="score_format">Score: %.2f</string>
</resources>