<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clockContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClockActivity">

    <!-- Clock numbers -->

    <!-- Clock contour -->



        <ImageView
            android:id="@+id/imageNumberOne"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_one"
            android:src="@drawable/number_one" />

        <ImageView
            android:id="@+id/imageNumberTwo"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_two"
            android:src="@drawable/number_two" />

        <ImageView
            android:id="@+id/imageNumberThree"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_three"
            android:src="@drawable/number_three" />

        <ImageView
            android:id="@+id/imageNumberFour"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_four"
            android:src="@drawable/number_four" />

        <ImageView
            android:id="@+id/imageNumberFive"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_five"
            android:src="@drawable/number_five" />

        <ImageView
            android:id="@+id/imageNumberSix"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_six"
            android:src="@drawable/number_six" />



        <ImageView
            android:id="@+id/imageNumberSeven"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_seven"
            android:src="@drawable/number_seven" />

        <ImageView
            android:id="@+id/imageNumberEight"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_eight"
            android:src="@drawable/number_eight" />

        <ImageView
            android:id="@+id/imageNumberNine"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_nine"
            android:src="@drawable/number_nine" />

        <ImageView
            android:id="@+id/imageNumberTen"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_ten"
            android:src="@drawable/number_ten" />

        <ImageView
            android:id="@+id/imageNumberEleven"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:contentDescription="@string/number_eleven"
            android:src="@drawable/number_eleven" />


    <ImageView
        android:id="@+id/imageNumberTwelve"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:contentDescription="@string/number_twelve"
        android:src="@drawable/number_twelve" />

    <ImageView
        android:id="@+id/imageClockContour"
        android:layout_width="399dp"
        android:layout_height="304dp"
        android:layout_centerInParent="true"
        android:src="@drawable/clock_contour" />


    <ImageView
        android:id="@+id/imageHourHand"
        android:layout_width="131dp"
        android:layout_height="162dp"
        android:layout_alignTop="@id/imageClockContour"
        android:layout_marginTop="315dp"
        android:src="@drawable/clockhands" />

    <!-- Submit button -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="550dp"
        android:text="Submit" />

</RelativeLayout>
